--- a/content/jogja.html
+++ b/content/jogja.html
@@ -6,7 +6,7 @@
     <title>My WEB</title>
     <link rel="shortcut icon" href="/Assets/img/Logo universitas pamulang.png" type="image/x-icon">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,35 +20,42 @@
 </head>
 <body>
   
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-blog">
-        <div class="container">
-          <a class="navbar-brand" href="#">TOUR GUID</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-blog p-md-3">
+    <div class="container">
+        <a class="navbar-brand" href="/index.html">TOUR GUIDE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item mx-4">
-                <a class="nav-link active" href="index.html">Beranda</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="index.html">Promo</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="index.html">Layanan</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="index.html">Galry</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="index.html">Contact</a>
-              </li>
-            </ul>
-            <div class="sosmed">
-                <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="/Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
+                <span class="navbar-toggler-icon"></span>
+              </button>
             </div>
-          </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav mx-auto">
+                <li class="nav-item mx-4">
+                  <a class="nav-link active" href="/index.html#home">Beranda</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="/index.html#promo">Promo</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="/index.html#destination">Layanan</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="/index.html#galery">Galery</a>
+                </li>
+                <li class="nav-item mx-4 ">
+                  <a class="nav-link" href="/index.html#contack">Contact</a>
+                </li>
+              </ul>
+              <div class="sosmed p-md-1 pt-3">
+                  <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+              </div>
+            </div>
         </div>
+      </div>
     </nav>
 
     <section id="blog"class="text-center mt-5">
@@ -79,28 +86,28 @@
     </section>
 
     <section id="contack">
-        <div class="contack" id="contack">
-          <div class="row">
-            <div class="container">
-              <div class="col-12 mt-4">
-                <div class="sponsor">
-                  <img src="/Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
-                  <img src="/Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
-                  <img src="/Assets/img/wisata-indonesia-removebg-preview.png" alt="">
-                  <img src="/Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
-                </div>
-                <div class="body mt-4 mb-5">
-                  <h3>Ada yang bisa kami bantu?</h3>
-                  <div class="underline mx-auto"></div>
-                  <p class="mx-auto mt-3" style="width: 50%;">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
-                      Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
-                  <img src="/Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
-                  <img src="/Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
-                </div>
+      <div class="contack" id="contack">
+        <div class="row">
+          <div class="container">
+            <div class="col-12 mt-4">
+              <div class="sponsor">
+                <img src="/Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
+                <img src="/Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
+                <img src="/Assets/img/wisata-indonesia-removebg-preview.png" alt="">
+                <img src="/Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
+              </div>
+              <div class="body mt-4 mb-5">
+                <h3>Ada yang bisa kami bantu?</h3>
+                <div class="underline mx-auto"></div>
+                <p class="mx-auto mt-3">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
+                    Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
+                <img src="/Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
+                <img src="/Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </section>
   
     <div class="footer" id="footer">
@@ -113,14 +120,14 @@
         </div>
     </div>
   
-
     <script src="/Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
     <script src="https://kit.fontawesome.com/6bb3325ecd.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
