--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My WEB</title>
-    <link rel="shortcut icon" href="/Assets/img/Logo universitas pamulang.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/img/Logo universitas pamulang.png" type="image/x-icon">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,41 +16,49 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="/Assets/CSS/style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
 </head>
 <body>
-  
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent p-md-3">
-        <div class="container">
-          <a class="navbar-brand" href="#">TOUR GUID</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item mx-4">
-                <a class="nav-link active" href="#header">Beranda</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="#promo">Promo</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="#destination">Layanan</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="#galery">Galery</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="#contack">Contact</a>
-              </li>
-            </ul>
-            <div class="sosmed">
-                <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
-            </div>
-          </div>
-        </div>
-    </nav>
 
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent p-md-3">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">TOUR GUIDE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav mx-auto">
+                <li class="nav-item mx-4">
+                  <a class="nav-link active" href="#header">Beranda</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="#promo">Promo</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="#destination">Layanan</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="#galery">Galery</a>
+                </li>
+                <li class="nav-item mx-4 ">
+                  <a class="nav-link" href="#contack">Contact</a>
+                </li>
+              </ul>
+
+              <div class="sosmed p-md-1 pt-3">
+                  <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+              </div>
+            </div>
+        </div>
+      </div>
+    </nav>
+  
     <section id="header" style="background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(./Assets/img/Gunung-Bromo-Jawa-Timur.jpg);">
       <div class="header">
         <div class="container">
@@ -177,45 +185,45 @@
               <div class="carousel-item active" style="background-image: linear-gradient(0deg,rgba(100, 92, 92, 0.288), rgba(49, 44, 44, 0.473)), url(./Assets/img/Bali.jpg) ; background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="card">
-                      <img src="/Assets/img/bali in.jpg" alt="" data-aos="fade-left" data-aos-duration="2000">
+                      <img src="./Assets/img/bali in.jpg" alt="" data-aos="fade-left" data-aos-duration="2000">
                   </div>
-                  <div class="isi" style="margin-left: 5%;" data-aos="zoom-out" data-aos-duration="600">
+                  <div class="isi" data-aos="zoom-out" data-aos-duration="600">
                     <h2>Wisata Pulau Bali</h2>
                     <p>
                        Bali memiliki banyak keindahan alam yang sangat indah mulai dari deretan pantainya, suasana pegunungannya sampai pura-pura sakralnya.
                         Dari sekian banyak tempat wisata menarik, yang paling populer di telinga wisatawan tentu saja Pantai Kuta, Pantai Legian, Pantai Seminyak, 
                         Pura Tanah Lot dan suasana pedesaan Ubud.
                     </p>
-                    <a href="bali.html"><button class="btn btn-primary" >Selengkapnya</button></a>
+                    <a href="./content/bali.html"><button class="btn btn-primary" >Selengkapnya</button></a>
                   </div>
                 </div>
               </div>
               <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(./Assets/img/raja_ampat_islands.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="card">
-                    <img src="/Assets/img/Kepulauan-Raja-Ampat-Papua.jpg" alt="">
+                    <img src="./Assets/img/wisata-bawah-laut-pulau-seribu.jpg" alt="">
                   </div>
-                  <div class="isi" style="margin-right: 5%; margin-left: 5%;">
+                  <div class="isi">
                     <h2>Wisata Pulau Raja Ampat</h2>
                     <p>
                       Raja Ampat menjadi primadona baru di dunia pariwisata Indonesia yang menjadi tempat wisata terindah di indonesia, Raja Ampat sendiri merupakan kumpulan dari pulau-pulau di ujung Papua. Perairan di tempat wisata ini dikenal sebagai salah satu lokasi menyelam dan snorkeling terbaik di dunia.
                     </p>
-                    <a href="rajaampat.html"><button class="btn btn-primary" >Selengkapnya</button></a>
+                    <a href="./content/rajaampat.html"><button class="btn btn-primary" >Selengkapnya</button></a>
                   </div>
                 </div>
               </div>
               <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(./Assets/img/Candi-Borobudur-Magelang-1536x1025.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="card">
-                    <img src="/Assets/img/yogya.jpg" alt="">
+                    <img src="./Assets/img/tugujogja.jpg" alt="">
                   </div>
-                  <div class="isi" style="margin-left: 5%;">
+                  <div class="isi">
                     <h2>Wisata Keliling Yogyakarta</h2>
                     <p>
                       Kota Yogyakarta merukan kota yang menawarkan keindahan alamnya yang indah, Yogyakarta merupakan spot destinasi wisata ysng paling banyak di tuju oleh para touris dan orang lokal.
                       di antaranya wiata candi, pantai, dan wisata alam, yang paling populer adalah wisata candi yang memiliki sejarah didalammnya.
                     </p>
-                    <a href="jogja.html"><button class="btn btn-primary" >Selengkapnya</button></a>
+                    <a href="./content/jogja.html"><button class="btn btn-primary" >Selengkapnya</button></a>
                   </div>
                 </div>
               </div>
@@ -245,66 +253,66 @@
             <div class="row">
               <div class="col-lg-4 ">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000">
-                  <img src="/Assets/img/bromo.jpg" alt="">
+                  <img src="./Assets/img/bromo.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bromo</h3>
                     <p>Gunung Bromo adalah salah satu gunung yang indah, Gunung Bromo Terletak di Jawa Timur.</p>
-                    <a href="bromo.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
+                    <a href="./content/bromo.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
-                  <img src="/Assets/img/Bali.jpg" alt="">
+                  <img src="./Assets/img/Bali.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bali</h3>
                     <p>Bali menawarkan berbagai wisata Pantai Kuta, Pantai Legian, Pura Tanah Lot dan suasana pedesaan Ubud.</p>
-                    <a href="bali.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
+                    <a href="./content/bali.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300">
-                  <img src="/Assets/img/Lombok.jpg" alt="">
+                  <img src="./Assets/img/Lombok.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Lombok</h3>
                     <p>Lombok, terletak di timur Bali, adalah destinasi yang memesona dengan daya tarik alam dan budaya yang khas</p>
-                    <a href="lombok.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
+                    <a href="./content/lombok.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400">
-                  <img src="/Assets/img/yogya.jpg" alt="">
+                  <img src="./Assets/img/yogya.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Yogyakarta</h3>
                     <p>Yogyakarta memiliki banyak tempat wisata di antaranya wiata candi, pantai, dan wisata alam dan wisata candi </p>
-                    <a href="jogja.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
+                    <a href="./content/jogja.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="500">
-                  <img src="/Assets/img/bunaken.jpg" alt="">
+                  <img src="./Assets/img/bunaken.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bunaken</h3>
                     <p>Taman Laut Bunaken yang bertempat di Provinsi Sulawesi Utara.yang merupakan kawasan konservasi terumbu karang dan biota laut lain dengan luas</p>
-                    <a href="bunaken.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
+                    <a href="./content/bunaken.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
-                  <img src="/Assets/img/Kepulauan-Seribu.jpg" alt="">
+                  <img src="./Assets/img/Kepulauan-Seribu.jpg" alt="">
                   <div class="info p-4">
-                    <h3>Wisata Kepuilauan Seribu</h3>
-                    <p> Kepulauan seribu juga memiliki banyak pulau di antaranya adalah Pulau Kahyangan, Pulau Pabelokan, dan Pulau Bidadari</p>
-                    <a href="kepulauanseribu.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
+                    <h3>Wisata Pulau Seribu</h3>
+                    <p> Kepulauan seribu juga memiliki banyak pulau di antaranya adalah Pulau Kahyangan, dan Pulau Pabelokan</p>
+                    <a href="./content/kepulauanseribu.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
@@ -327,7 +335,7 @@
               <div class="body mt-4 mb-5">
                 <h3>Ada yang bisa kami bantu?</h3>
                 <div class="underline mx-auto"></div>
-                <p class="mx-auto mt-3" style="width: 50%;">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
+                <p class="mx-auto mt-3">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
                     Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
                 <img src="./Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
                 <img src="./Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
@@ -353,8 +361,9 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
     <script src="https://kit.fontawesome.com/6bb3325ecd.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
